# soliloquy

./: pyproject.toml
