[tool.poetry]
name = "soliloquy"
version = "0.1.0"
description = "A text-based adventure game engine with natural language processing"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/soliloquy"
keywords = ["game", "text-adventure", "interactive-fiction", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyyaml = "^6.0"
colorama = "^0.4.4"
transformers = { version = "^4.20.0", optional = true }
torch = { version = "^1.10.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.3.0"
flake8 = "^5.0.0"
mypy = "^0.950"
isort = "^5.10.1"

[tool.poetry.extras]
neural = ["transformers", "torch"]

[tool.poetry.scripts]
soliloquy = "soliloquy.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
